2008.08.13: David Nichols
	* added configure check for xmlTextReaderSetSchema() to disable
	  parseXMLWithSchema() if this function is not present in libxml2

2008.08.12: David Nichols
	* removed badly-implemented verifyXMLWithSchema(), need to implement
	  XSDSchema class
	* added test for parseXMLWithSchema() to test/test.q
	* fixed HTTPClient to read body on error responses if present and
	  include in the "arg" key in the exception hash
	* fixed constant resolution to only increment the recursive counter when
	  recursivey resolving a constant
	* fixed constant expression evaluation
	* updated the QoreURL class to correctly parse strings that give only a
	  path

2008.08.11: David Nichols
	* fixed inlist() and inlist_hard() to return False unconditionally if
	  the second argument is NOTHING
	* improved XML generation; top-level elements may not have attributes
	* improved XML parse error reporting; detailed information about errors
	  is now included in the exception text
	* added parseXMLWithSchema() and validateXMLWithSchema() functions to
	  allow XML to be parsed and validated against an XSD schema

2008.08.10: David Nichols
	* fixed build to use subversion revision for BUILD tag

2008.08.07: David Nichols
	* fixed resolution of private static methods from within a subclass

2008.08.06: David Nichols
	* made QoreDir class thread-safe, fixed directory and file filtering
	* made QoreFile class thread-safe
	* removed synchronous class tagging because the implementation was very
	  inefficient

2008.07.13: David Nichols
        * new functions: inlist() and inlist_hard()
	* implemented tagging classes as "synchronous" to allow builtin classes
	  to have automatic thread locks on all methods (except constructors)
	* removed explicit locking from the Socket class (tagged as synchronous)
	* tagged the File and Dir classes as synchronous classes to ensure
	  proper locking

2008.06.26: David Nichols
        * initial glut module documentation
